     like the d10 or the d100 remain, but everything else now uses `d` or
     `roll`.
   - Following feedback on the general readability of the source code, a new
     style guide has been written and the source code has been made (mostly)
     compliant with it.  The Style Guide is included at the bottom of the
     Guidelines for Contributors. (docs/CONTRIBUTING.md)

  Added:
   - The player can now drop items.  By pressing the 'd' key, he will be able
     to drop an item from his weapon-hand or off-hand.  If only one hand has
     an item in it, it will be dropped automatically.  Alternatively, the
     player can drop items from the equipment screen by selecting a slot and
     then pressing the 'd' key when the "Drop" option comes up.

VERSION 0.32
Finalized 2020-09-11 17:28 CDT

  Save files from version 0.031 Christmas Update and earlier will are not
  compatible with this or future versions of SwashRL.

  Fixed:
   - The SDL terminal interface now inverts colors correctly.

  Added:
   - The OpenDyslexic Mono font, used to create a more readable interface for
     dyslexic users, has been added.  It is activated by the DYSLEXIA option
     in config.d
   - Debug builds can now access a color test screen by passing in
     --test-colors or --test-color in the command line.
   - Many many new color pairs have been defined.  Most of them are not
     currently in use but many are reserved for planned features to be
     included in later versions of SwashRL.

  Changed:
   - Default fonts for the SDL terminal interface are now defined in an enum
     named TileSet, which stores structs containing the filepath to a font
     file and the ideal height and weight for that font.
   - Whether or not the message line and status bar use a bolder font is now
     determined by a configuration setting in config.d rather than being
     hard-coded.
   - Substantial changes have been made to the way colors are stored.  SDL